# world_glimpse_api

./: .env-template  README.md  data_load.py  database.py  main.py  pyproject.toml
clean_data/: inequality_and_poverty_countries.csv  ongoing_conflicts.csv
models/: __init__.py  country_models.py  region_models.py
schemas/: __init__.py  country_schemas.py  region_schemas.py
