[tool.poetry]
name = "world_glimpse"
version = "0.1.0"
description = ""
authors = ["Marta Rg <martaroguerra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.3"
fastapi = "0.103.0"
uvicorn = "0.23.2"
newsapi-python = "0.2.7"
sqlalchemy = "2.0.20"
mysql-connector-python = "8.1.0"
alembic = "1.12.0"
wikipedia = "1.4.0"
python-dotenv = "1.0.0"
python-restcountries = "^2.0.0"
geoalchemy2 = "^0.14.1"
geopandas = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
